feat: add admin global library publishing
